--- a/service/govinor.service
+++ b/service/govinor.service
@@ -3,6 +3,7 @@ Description=Govinor platform
 After=network.target
 
 [Service]
+Environment=PATH=/home/ubuntu/.nvm/versions/node/v14.18.2/bin:/usr/local/sbin:/usr/local/bin
 Type=simple
 User=ubuntu
 ExecStart=/home/ubuntu/govinor/service/start.sh
