--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "dev:tailwind": "tailwindcss -o ./app/styles.css --watch",
     "dev:workers": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register -r dotenv/config workers/index.ts",
     "dev:redis": "docker compose up",
+    "db:reset": "prisma migrate reset",
+    "db:seed": "prisma db seed",
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate-deploy": "prisma migrate deploy",
+    "db:studio": "npx prisma studio",
+    "setup": "prisma migrate dev && prisma db seed",
     "postinstall": "remix setup node",
     "start": "npm run start:remix & npm run start:workers",
     "start:remix": "node -r dotenv/config node_modules/.bin/remix-serve build",
@@ -20,6 +27,7 @@
   "dependencies": {
     "@headlessui/react": "1.4.2",
     "@heroicons/react": "1.0.5",
+    "@prisma/client": "4.1.1",
     "@remix-run/react": "1.1.1",
     "@remix-run/serve": "1.1.1",
     "bullmq": "1.63.0",
@@ -29,12 +37,14 @@
     "get-port": "5.1.1",
     "ioredis": "4.28.2",
     "node-fetch": "2.6.6",
+    "pretty-bytes": "5.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remix": "1.1.1",
     "tiny-invariant": "1.2.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "7.3.0",
     "@remix-run/dev": "1.1.1",
     "@types/faker": "5.5.9",
     "@types/ioredis": "4.28.5",
@@ -42,15 +52,19 @@
     "@types/react-dom": "17.0.9",
     "concurrently": "6.4.0",
     "cross-env": "7.0.3",
+    "prisma": "4.1.1",
     "tailwindcss": "3.0.2",
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
     "tsconfig-paths": "3.12.0",
-    "typescript": "4.1.2",
+    "typescript": "4.6.4",
     "wait-on": "6.0.0"
   },
   "engines": {
     "node": ">=14"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "prisma": {
+    "seed": "ts-node --require tsconfig-paths/register prisma/seed.ts"
+  }
 }
