fix: Fix start Remix command

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "setup": "prisma migrate dev && prisma db seed",
     "postinstall": "remix setup node",
     "start": "npm run start:remix & npm run start:workers",
-    "start:remix": "remix-serve build",
+    "start:remix": "node -r dotenv/config node_modules/.bin/remix-serve build",
     "start:workers": "cross-env NODE_ENV=production ts-node --transpile-only -r tsconfig-paths/register -r dotenv/config workers/index.ts",
     "deploy": "./deploy.sh"
   },
