--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "remix": "1.6.5",
-    "tiny-invariant": "1.2.0"
+    "tiny-invariant": "1.2.0",
+    "zod": "3.17.10"
   },
   "devDependencies": {
     "@faker-js/faker": "7.3.0",
     "@remix-run/dev": "1.6.5",
+    "@tailwindcss/forms": "0.5.2",
     "@types/ioredis": "4.28.5",
     "@types/react": "17.0.24",
     "@types/react-dom": "17.0.9",
