--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "10.0.0",
     "get-port": "5.1.1",
     "ioredis": "4.28.2",
+    "lodash": "4.17.21",
     "node-fetch": "2.6.6",
     "pretty-bytes": "5.6.0",
     "react": "17.0.2",
@@ -51,6 +52,7 @@
     "@remix-run/dev": "1.6.5",
     "@tailwindcss/forms": "0.5.2",
     "@types/ioredis": "4.28.5",
+    "@types/lodash": "4.14.194",
     "@types/react": "17.0.24",
     "@types/react-dom": "17.0.9",
     "concurrently": "6.4.0",
