--- a/service/govinor.service
+++ b/service/govinor.service
@@ -3,11 +3,12 @@ Description=Govinor platform
 After=network.target
 
 [Service]
-Environment=PATH=/home/ubuntu/.nvm/versions/node/v20.11.1/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
+Environment=PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
 Type=simple
 User=ubuntu
-ExecStart=/home/ubuntu/govinor/service/start.sh
+ExecStart=/bin/bash -c 'source /home/ubuntu/.nvm/nvm.sh && nvm use default && exec /home/ubuntu/govinor/service/start.sh'
 Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
+
