--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "name": "govinor",
+  "version": "0.1.0",
   "description": "A platform to deploy and preview docker containers.",
   "license": "MIT",
   "scripts": {
@@ -62,7 +63,7 @@
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
     "tsconfig-paths": "3.12.0",
-    "typescript": "4.6.4",
+    "typescript": "5.1.3",
     "wait-on": "6.0.0"
   },
   "engines": {
