--- a/package.json
+++ b/package.json
@@ -30,26 +30,27 @@
     "@headlessui/react": "1.7.14",
     "@heroicons/react": "2.0.18",
     "@prisma/client": "4.1.1",
-    "@remix-run/node": "2.0.1",
-    "@remix-run/react": "2.0.1",
-    "@remix-run/serve": "2.0.1",
-    "@remix-run/server-runtime": "2.0.1",
+    "@remix-run/node": "2.6.0",
+    "@remix-run/react": "2.6.0",
+    "@remix-run/serve": "2.6.0",
+    "@remix-run/server-runtime": "2.6.0",
     "bullmq": "1.63.0",
     "dayjs": "1.11.4",
     "dotenv": "10.0.0",
     "get-port": "5.1.1",
     "ioredis": "4.28.2",
+    "isbot": "4.4.0",
     "lodash": "4.17.21",
     "pretty-bytes": "5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "remix": "2.0.1",
+    "remix": "2.6.0",
     "tiny-invariant": "1.2.0",
     "zod": "3.17.10"
   },
   "devDependencies": {
     "@faker-js/faker": "7.3.0",
-    "@remix-run/dev": "2.0.1",
+    "@remix-run/dev": "2.6.0",
     "@tailwindcss/forms": "0.5.2",
     "@types/ioredis": "4.28.5",
     "@types/lodash": "4.14.194",
