--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "description": "A platform to deploy and preview docker containers.",
   "license": "MIT",
   "scripts": {
-    "build": "npm run build:prisma && npm run build:css && remix build",
-    "build:css": "tailwindcss -o ./app/styles.css",
+    "build": "npm run build:prisma && remix build",
     "build:prisma": "prisma generate",
-    "dev": "concurrently -p \"[{name}]\" -n \"remix,workers,tailwind,redis\" -c \"blue.bold,magenta.bold,green.bold,red.bold\" \"npm:dev:remix\" \"npm:dev:workers\" \"npm:dev:tailwind\" \"npm:dev:redis\"",
+    "dev": "concurrently -p \"[{name}]\" -n \"remix,workers,redis\" -c \"blue.bold,magenta.bold,green.bold,red.bold\" \"npm:dev:remix\" \"npm:dev:workers\" \"npm:dev:redis\"",
     "dev:remix": "cross-env NODE_ENV=development remix dev",
-    "dev:tailwind": "tailwindcss -o ./app/styles.css --watch",
     "dev:workers": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register -r dotenv/config workers/index.ts",
     "dev:redis": "docker compose up",
     "db:reset": "prisma migrate reset",
@@ -59,7 +57,7 @@
     "concurrently": "6.4.0",
     "cross-env": "7.0.3",
     "prisma": "4.1.1",
-    "tailwindcss": "3.1.6",
+    "tailwindcss": "3.4.1",
     "ts-node": "10.4.0",
     "ts-node-dev": "1.1.8",
     "tsconfig-paths": "3.12.0",
